fix url, z-index

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  z-index: 1;
+  /* z-index: 1; */
   width: 100%;
   padding: 0 20px;
 }
